# CleanEr

./: readme.md
flask-app/: pyproject.toml
flask-app/flask_app/: app.py  utils.py
impl/: .gitignore  pyproject.toml
impl/oracle_mistakes/: misclass_prob.py  risky_var.py  utils.py
react-app/: package-lock.json  package.json
react-app/app/: header.js  layout.js  page.js  user_input.js
react-app/app/api/database/: database.js
react-app/app/api/database/query/: route.js
react-app/app/api/database/tables/: route.js
react-app/app/dashboard/: expert_input.js  improve_input_tuple_prob.js  input_summary.js  output_tuple_details.js  page.js  reach_mes_score_modal.js  results_table.js
react-app/app/{utils}/: fonts.js  utils.js
react-app/src/: dummy_cleaner.js  utils.js
react-app/style/: global.css  user_input.module.css  utils.module.css
react-app/style/dashboard/: expert_input.module.css  improve_input_tuple_prob.module.css  input_summary.module.css  output_tuple_details.module.css  results_table.module.css
