[tool.poetry]
name = "flask-app"
description = ""
authors = ["Ran Schreiber <ransch7@gmail.com>"]
version = "0.1.0"
packages = [{include = "flask_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flask = "^2.3.2"
sympy = "^1.11.1"
oracle-mistakes = {path = "../impl/dist/oracle_mistakes-0.1.0.tar.gz"}
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
