[tool.poetry]
name = "oracle-mistakes"
description = ""
authors = ["Ran Schreiber <ransch7@gmail.com>"]
version = "0.1.0"
packages = [{include = "oracle_mistakes"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sympy = "^1.11.1"
ortools = "^9.6.2534"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
